# inferlite

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/commands/: archive.md  next-task.md  plan.md  preflight.md  review-card.md  work.md
1-plan/M1/: index.html
1-plan/PLAN/: index.html
1-plan/PROGRESS/: index.html
2-tasks/: index.html
2-tasks/M1-T0-ModelConfig/: index.html
2-tasks/M1-T1-RMSNorm/: index.html
2-tasks/M1-T2-SwiGLU/: index.html
2-tasks/M1-T3-RoPE/: index.html
2-tasks/M1-T4-GQA-Attention/: index.html
2-tasks/M1-T5-DecoderLayer/: index.html
2-tasks/M1-T6-Qwen3Model/: index.html
2-tasks/M1-T7-WeightMap-load-from-hf/: index.html
2-tasks/_TEMPLATE/: index.html
3-kb/REFERENCES/: index.html
3-kb/decisions/: index.html
3-kb/knowledge/: index.html
3-kb/lessons/: index.html
4-setup/: index.html
docs/: M1.md  PLAN.md  PROGRESS.md  README.md  REFERENCES.md  SETUP.md  STRUCTURE.md  decisions.md  knowledge.md  lessons.md  m1-naive-forward.md  m2-kv-cache-design.md  setup.md
docs/1-plan/: M1.md  PROGRESS.md
docs/2-tasks/: M1-T0-ModelConfig.md  M1-T10-EngineCore-step.md  M1-T4-GQA-Attention.md  M1-T6-Qwen3Model.md  M1-T7-WeightMap-load-from-hf.md  M1-T9-LLMModel-GreedySampler.md  README.md
docs/3-kb/: knowledge.md  lessons.md
docs/kb/: blueprints.md  knowledge.md  lessons.md
docs/plan/: M1.md  M2.md  M3.md  PLAN.md
docs/tasks/: M1-T0p-ModelConfig.md  M1-T1-RMSNorm.md  M1-T2-SwiGLU.md  M2-T1-KVCache-DataStructure.md  M2-T2-Attention-KVCache.md  M2-T3-Model-Passthrough.md  M2-T4-Generate-Loop.md  M2-T5-CLI-Device-Dtype.md  README.md  _TEMPLATE.md
inferlite/: cli.py  config.py
inferlite/engine/: __init__.py  core.py  protocol.py
inferlite/model/: attention.py  kv_cache.py  qwen3.py  weights.py
kb/blueprints/: index.html
kb/knowledge/: index.html
kb/lessons/: index.html
plan/M1/: index.html
plan/M2/: index.html
plan/M3/: index.html
plan/PLAN/: index.html
plan/PROGRESS/: index.html
plan/m2-kv-cache-design/: index.html
scripts/: bench_attention_only.py  bench_kv_cache.py  doctor.sh  preflight.py
search/: search_index.json
tasks/M2-T1-KVCache-DataStructure/: index.html
tasks/M2-T2-Attention-KVCache/: index.html
tasks/M2-T3-Model-Passthrough/: index.html
tasks/M2-T4-Generate-Loop/: index.html
tasks/M2-T5-CLI-Device-Dtype/: index.html
(+50 files in other folders)
