[project]
name = "inferlite"
version = "0.1.0"
description = "A from-scratch LLM inference framework for learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Versions pinned to a known-good major; current uv.lock is the source of truth
    "torch>=2.4,<3",
    "transformers>=5.10,<6",
    "huggingface_hub>=1.5,<2",
    "safetensors>=0.4,<1",
    "fastapi>=0.110,<1",
    "uvicorn>=0.30,<1",
    "modelscope>=1.18,<2",  # CN-friendly model hub; preflight uses it by default
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inferlite"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
